# college-club-discord-bot

./: .gitignore  Cargo.toml  README.md
frontend/: .gitignore  bun.lockb  index.html  package.json  vite.config.ts
frontend/src/components/: TheWelcome.vue
src/: main.rs
