[package]
name = "saibot"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-runtime = "0.38.0"
shuttle-warp = "0.38.0"
shuttle-secrets = "0.38.0"
tokio = "1.26.0"
warp = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.12.0", features = ["client", "gateway", "rustls_backend", "model"] }
once_cell = "1.19.0"
rand = "0.8"
chrono = "0.4"
geohash = "0.13.0"
mongodb = "2.8.0"
reqwest = "0.11.24"
